--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  font-family: 'DynaPuff', 'PT Sans Narrow', sans-serif;
+  font-family: 'DynaPuff', cursive;
+  font-family: 'PT Sans Narrow', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
