--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 20px 40px;
   font-family: 'DynaPuff', cursive;
   font-family: 'PT Sans Narrow', sans-serif;
   -webkit-font-smoothing: antialiased;
